--- a/src/content/app/species/components/species-title-area/SpeciesTitleArea.module.css
+++ b/src/content/app/species/components/species-title-area/SpeciesTitleArea.module.css
@@ -9,7 +9,7 @@
   align-items: center;
   grid-column-gap: 20px;
   padding-right: 20px;
-  justify-content: start;
+  justify-items: start;
 }
 
 .speciesIcon {
